test/negative/t3.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel {| function f (x:float): bool = x = 2 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

(*@ function f ... *)
File "t3.mli", line 11, characters 30-31:
Error: This term has type `float' but a term was expected of type `integer'.
